--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -1,6 +1,6 @@
 <header>
-    <nav class="navbar navbar-expand-sm navbar-light bg-light">
-    <div class="titre">
+    <nav class="text text-success">
+    <div class="titre" class="navbar-header">
         Caillou clicker
     </div>
     <div class="menu">
