--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,11 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}{% endblock %}</title>
-        <link rel="stylesheet" src="css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         {% include 'navbar.html.twig' %}
-        {% block body %}{% endblock %}
+        <div class="bodyContent">
+            <div class="underBodyContent">
+            {% block body %}{% endblock %}
+            </div>
+        </div>
         {% block js %}{% endblock %}
         <script src="/js/jquery-2.2.4.js"></script>
         <script src="/js/bootstrap.min.js"></script>
