--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -12,10 +12,11 @@
         </p>
         <p>
         </p>
-        <a href="/create">Créer un compte</a></br>
-        <a href="/login">Login</a>
+        <a href="/create" class="btn btn-light">Créer un compte</a></br>
+        <a href="/login" class="btn btn-light">Login</a>
     </div>
     <div class="highscore">
+        <h2>HighScore</h2>
     </div>
 {% endblock %}
 
