--- a/templates/login.html.twig
+++ b/templates/login.html.twig
@@ -6,10 +6,8 @@
     <h2>Login</h2>
     {{ form_start(login) }}
     {{ form_widget(login) }}
-    {{ form_rest(login) }}
     {{ form_end(login) }}
-    {{ form_row(login._token, {'label': 'token' }) }}
-    <a href="/create">Créer un compte</a>
+    <a href="/create" class="btn btn-light">Créer un compte</a>
     {% if validPseudo == false %}
         <div class="valid">
         Impossible de se connecter,
