--- a/templates/jeu.html.twig
+++ b/templates/jeu.html.twig
@@ -4,17 +4,15 @@
 
 {% block body %}
     <div class="initData" data-id={{ perso.id }}></div>
-    <div id="nom">
-    </div>
-    <div id="avatar">
+    <div class="gameHeader">
+        <div id="nom"></div>
+        <div id="avatar"></div>
     </div>
     <div id="game">
     </div>
-    <div class="stats">
+    <div class="gameStats">
         <div id="score">
-            <div class="label">
-                Score:
-            </div>
+            <div class="label">Score: </div>
             <div class="value">
             </div>
         </div>
@@ -26,6 +24,7 @@
             </div>
         </div>
     </div>
+    <a href="/compte" class="btn btn-light">Retour au choix des perso</a>
     {% if debug %}
     <div class="debug">
         debug: <br/>
@@ -35,7 +34,6 @@
         button:
     </div>
     {% endif %}
-    <a href="/compte">Retour au choix des perso</a>
 {% endblock %}
 
 {% block js %}
