--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -1,19 +1,18 @@
 <header>
-    <nav class="text text-success">
+    <nav class="navbar">
     <div class="titre" class="navbar-header">
-        Caillou clicker
+        <a href="/" class="navbar-brand">Caillou clicker</a>
     </div>
-    <div class="menu">
-        {# recupère le nom du compte dans la session #}
-        {% if app.session.get("user") %}
-            Bonjour {{ app.session.get("user") }} !
-            <br/>
-            Vous n'êtes pas {{ app.session.get("user") }} ?
-            <br/>
-            <a href="logoutLogin">Se connecter à un autre compte</a>
-            <br/>
-            <a href="logoutCreate">Créer un compte</a>
-        {% endif %}
+    {% if app.session.get("user") %}
+    <div class="menu nav navbar-nav">
+        <ul class="nav">
+            <li>Bonjour <span class="text-success">{{ app.session.get("user") }}</span>
+                ! 
+                Vous n'êtes pas <span class="text-success">{{ app.session.get("user") }}</span> ? </li>
+            <li><a href="logoutLogin">Se connecter à un autre compte</a> </li>
+            <li><a href="logoutCreate">Créer un compte</a> </li>
+        </ul>
     </div>
+    {% endif %}
     </nav>
 </header>
