--- a/templates/jeu.html.twig
+++ b/templates/jeu.html.twig
@@ -12,7 +12,8 @@
     </div>
     <div class="gameStats">
         <div id="score">
-            <div class="label">Score: </div>
+            <div class="label">Score: 
+            </div>
             <div class="value">
             </div>
         </div>
